--- a/index.html
+++ b/index.html
@@ -102,10 +102,127 @@
 
 
 </div> <!-- End of Slider -->
+<div class="container text-center">
+	<h2>What We're using</h2>
+	<div class="row ">
+		<div class="col-sm-4">
+			<img src="img/html5.png" alt="" id="icon">
+			<h4>HTML 5</h4>
+		</div>
+		<div class="col-sm-4">
+			<img src="img/bootstrap.png" alt="" id="icon">
+			<h4>BOOTSTRAP 3</h4>
+		</div>
+		<div class="col-sm-4">
+			<img src="img/css3.png" alt="" id="icon">
+			<h4>CCS 3</h4>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-6">
+			
+<h4>Here's the cool thing about Bootstrap</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex suscipit, architecto vero molestiae, impedit consectetur blanditiis. Dolore quod architecto, iure dolores beatae, veritatis, incidunt asperiores aliquam magni repudiandae amet consequuntur!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur optio suscipit ex, quis commodi vero accusantium maiores, laboriosam laborum voluptatum quae cum quo perspiciatis doloribus inventore! Atque, tempore eaque.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur optio suscipit ex, quis commodi vero accusantium maiores, laboriosam laborum voluptatum quae cum quo perspiciatis doloribus inventore! Atque, tempore eaque.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur optio suscipit ex, quis commodi vero accusantium maiores, laboriosam laborum voluptatum quae cum quo perspiciatis doloribus inventore! Atque, tempore eaque.</p>
+
+
+		</div>
+				<div class="col-md-6">
+					<img src="img/bootstrap2.jpg" class="img-responsive">
+				</div>
+	</div>
+</div>
+
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+			
+			<h4>Built with Sass</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex suscipit, architecto vero molestiae, impedit consectetur blanditiis. Dolore quod architecto, iure dolores beatae, veritatis, incidunt asperiores aliquam magni repudiandae amet consequuntur!</p>
+
+
+		</div>
+		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+			<img src="img/sass.png" class="img-responsive">
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+			
+			<h4>And Less</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex suscipit, architecto vero molestiae, impedit consectetur blanditiis. Dolore quod architecto, iure dolores beatae, veritatis, incidunt asperiores aliquam magni repudiandae amet consequuntur!</p>
+
+
+		</div>
+		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+			<img src="img/less.png" class="img-responsive">
+		</div>
+	</div>
+</div>
+
+
+
+
+
+<div class="container">
+	<div class="row">
+		
+		<h4 ><a href="#hidden" data-toggle="collapse">Care to learn mores about Bootstrap?</a></h4>
+		<div id="hidden" class="collapse">
+
+<h4>Here's the cool thing about Bootstrap</h4>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex suscipit, architecto vero molestiae, impedit consectetur blanditiis. Dolore quod architecto, iure dolores beatae, veritatis, incidunt asperiores aliquam magni repudiandae amet consequuntur!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur optio suscipit ex, quis commodi vero accusantium maiores, laboriosam laborum voluptatum quae cum quo perspiciatis doloribus inventore! Atque, tempore eaque.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur optio suscipit ex, quis commodi vero accusantium maiores, laboriosam laborum voluptatum quae cum quo perspiciatis doloribus inventore! Atque, tempore eaque.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consequuntur optio suscipit ex, quis commodi vero accusantium maiores, laboriosam laborum voluptatum quae cum quo perspiciatis doloribus inventore! Atque, tempore eaque.</p>
+
+
+		</div>
+			
+	</div>
+</div>
+
+<footer class="container-fluid text-center">
+	
+		<div class="row">
+			
+			<div class="col-sm-4">
+				<h3>Contact Us</h3>
+				<br/>
+				<h4>Our address and contact info here</h4>
+			</div>
+			<div class="col-sm-4">
+				<h3>Connect</h3>
+				<a href="#" class="fa fa-facebook"></a>
+				<a href="#" class="fa fa-twitter"></a>
+				<a href="#" class="fa fa-google"></a>
+				<a href="#" class="fa fa-linkedin"></a>				
+				<a href="#" class="fa fa-youtube"></a>
+				
+				
+			</div>
+			<div class="col-sm-4">
+			<img src="img/bunny.png" class="icon">	
+			</div>
+		</div>
+</footer>
+
+
+
 
 
 </body>
 </html>
+
 
 
 
